--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -2,13 +2,10 @@
   on:
     workflow_dispatch:
     push:
-      tags:
-        - '[0-9]+.[0-9]+.[0-9]+'
-  concurrency: keycloak-container-release
+      branches: main
 
   jobs:
     publish:
-      if: github.repository == 'keycloak/keycloak'
       runs-on: ubuntu-latest
       steps:
       - name: Checkout
@@ -16,15 +13,15 @@
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        
+
       - name: Container metadata
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: quay.io/keycloak/keycloak
+          images: quay.io/eucleciojosias/keycloak
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
@@ -35,7 +32,7 @@
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_TOKEN }}
+          password: ${{ secrets.QUAY_PASS }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
